# SIDBlasterUSB_HardSID-emulation-driver

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
D2XXLib/: CMakeLists.txt
D2XXLib/include/D2XXLib/: D2XXDevice.h  D2XXDeviceManager.h  Utilities.h
D2XXLib/src/: D2XXDevice.cpp  D2XXDeviceManager.cpp
D2XXLib/vs2012/: D2XXLib.vcxproj  D2XXLib.vcxproj.filters
SIDBlasterLib/: CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  CommandReceiver.cpp  CommandReceiver.h  DebugSIDBlasterInterface.cpp  DebugSIDBlasterInterface.h  ILogger.h  SIDBlasterInterface.cpp  SIDBlasterInterface.h  SIDBlasterInterfaceImpl.cpp  SIDBlasterInterfaceImpl.h
SIDBlasterLib/vs2012/: SIDBlasterLib.vcxproj  SIDBlasterLib.vcxproj.filters
cmake/: FindFTD2XX.cmake
docs/: hardsid_dll_readme.txt
driver/: readme.txt
hardsiddll/: DriverDefs.h  SyncDispatcher.cpp  SyncDispatcher.h  ThreadDispatcher.cpp  ThreadDispatcher.h  ThreadReceiver.cpp  ThreadReceiver.h  dllmain.cpp  hardsid.def  hardsid.hpp  hardsiddll.cpp
hardsiddll/vs2012/: hardsiddll_standalone.vcxproj  hardsiddll_standalone.vcxproj.filters
util/: EventObject.cpp  EventObject.h  MutexObject.cpp  MutexObject.h  ThreadObject.cpp  ThreadObject.h
vs2012/: SIDBlaster.sln
